# App-g.Tec

./: .gitignore  LICENSE
g.NEEDaccess/: CMakeLists.txt  README.md  gNautilus_default.cfg  gUSBamp_default.cfg
g.NEEDaccess/src/: gUSB_dlg.cpp  main.cpp  mainwindow.cpp  mainwindow.h  nautilus_dlg.cpp
g.USBamp/: .bintray.json  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  gUSB_dlg.cpp  gUSB_dlg.h  gUSB_dlg.ui  gUSBampLSL.cfg  gUSBamp_LSL_interface.cpp  gUSBamp_LSL_interface.h  gUSBamp_config.cpp  gUSBamp_config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
g.USBamp/cmake/: FindgUSBamp.cmake
g.USBamp_old/: CMakeLists.txt  LICENSE.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
g.USBamp_old/cmake/: FindgUSBamp.cmake
